Added a note about live resizing, because it's too amusing not to play with.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
+					<p class="lead"><strong>Hey! This site is fully width responsive! Try resizing!</strong></p>
 					<h1>About Me</h1>
 					<p style="font-size:125%">My name is Isaac, I'm originally from Newton (yes, yes), and I live near Davis Square. I'm currently in the process of taking the long way through college. When I'm not doing something for class, I search unsuccessfully for work, play video games, and sometimes even act. If you find yourself wanting more, I suppose you could really just <a href="http://www.isaaczarsky.com">look here.</a></p>
 					<br />
